Fix invisible .timeToThink

--- a/src/bga.css
+++ b/src/bga.css
@@ -123,7 +123,7 @@ a:visited.playername {
 
 .player-board {
   background-repeat: no-repeat;
-  background-position: top -15px right -9px, top center;
+  background-position: top -15px right -5px, top center;
   background-size: auto, cover;
   background-color: #888;
   padding-bottom: 26px;
@@ -140,7 +140,8 @@ a:visited.playername {
   background: none;
 }
 
-.boardblock {
+.boardblock,
+.timeToThink {
   background-color: #8889;
 }
 
